# gstree

./: .gitignore  .roomodes  README.md  READYOU_SPEC.md  playlist_meta.py  pyproject.toml
carnatic/: .clinerules  README.md  _phase1_extract.py  cli.py  graph.html  graph_api.py  patch_librarian_session_startup.py  patch_roomodes_note_to_self.py  patch_roomodes_remove_git_fiend.py  render.py  write_cli.py  writer.py
carnatic/data/: READYOU.md  compositions.json  graph.json  musicians.json  recordings.json
carnatic/data/recordings/: music_academy_1966_semmangudi.json
carnatic/drawings/: concept_map.excalidraw
carnatic/playlists/: ingest_akkarai_youtube.py
carnatic/render/: __init__.py  _main.py  data_loaders.py  data_transforms.py  graph_builder.py  html_generator.py  sync.py
carnatic/render/templates/: bani_flow.js
carnatic/tests/: __init__.py  conftest.py  test_bani_flow.py  test_graph_topology.py  test_schema_integrity.py  test_traversal.py
plans/: ADR-001-bani-flow-highlighting-bug.md  ADR-002-dual-search-boxes.md  ADR-003-bani-flow-left-sidebar.md  ADR-004-bani-flow-visual-consistency.md  ADR-006-node-header-era-dot-disambiguation.md  ADR-008-era-instrument-topbar-filters.md  ADR-012-same-concert-track-switching.md  ADR-014-librarian-cli-orientation-tools.md  ADR-016-writer-validation-source-of-truth.md  ADR-018-concert-bracketed-recording-groups.md  ADR-019-co-performer-bracketed-trail-entries.md  ADR-022-raga-panel-navigability.md  ADR-026-concert-anchored-player-title-and-track-selector.md
